# terraform-aws-lambda-slack-bot

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  CLAUDE.md  DOCUMENTATION_VERIFICATION.md  MODERNIZATION_CHECKPOINT.md  README.md  VERIFICATION.md  api_gateway.tf  iam.tf  index.py  lambda.tf  main.tf  outputs.tf  provider.tf  pyproject.toml  ruff.toml  test-event.json  variables.tf  versions.tf
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  dependency-manager.md  linting-root-cause-resolver.md  security-auditor.md  testing-specialist.md
.claude/skills/holistic-linting/: SKILL.md
.claude/skills/modernize/: CHECKLIST.md  SKILL.md  checkpoint-template.md
.claude/skills/modernize/scripts/: git-checkpoint-save.sh  init-checkpoint.sh  update-progress.sh
.github/workflows/: validate.yml
docs/: BROWNFIELD_MODERNIZATION_GUIDE.md
lambda/: bot_functions.py  index.py  index_sns.py
